Fixed thumb and star icon spacing for poll

--- a/css/layouts/pollStyle.css
+++ b/css/layouts/pollStyle.css
@@ -12,7 +12,8 @@
     background-color: #f4f4f4;
     padding: 2%;
     border-radius: 7px;
-    box-shadow: 2px 2px 5px #2c2c2c
+    box-shadow: 2px 2px 5px #2c2c2c;
+    height: 50px;
 }
 
 .poll-dialog-vote-object:hover {
@@ -53,11 +54,19 @@
 .material-icons.thumb {
     color: #616161;
     margin-right: 5px;
+    margin-top: 3px;
+    float: left;
+    padding-right: 10px;
+    margin-left: 6px;
 }
 
 .material-icons.stars {
     color: #616161;
     margin-right: 5px;
+    margin-top: 3px;
+    float: left;
+    padding-right: 10px;
+    margin-left: 6px;
 }
 
 .number-of-votes {
@@ -65,6 +74,18 @@
     padding-right: 10px;
     margin-top: 5px;
 }
+
+.restaurant-name {
+    float: left;
+    padding-right: 10px;
+    margin-top: 5px;   
+}
+
+/*.vote-and-winner-icon {
+    float: left;
+    padding-right: 10px;
+    margin-top: 3px;   
+}*/
 
 #share-text {
     text-align: right;
